--- a/pikachu/chicken_rabbit/chicken_rabbit.html
+++ b/pikachu/chicken_rabbit/chicken_rabbit.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="format-detection" content="telephone=no" />    
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
+    <meta http-equiv="Expires" content="0">
+    <link rel="Shortcut Icon" href="https://cdn.bihe0832.com/images/zixie_32.ico" />
+
     <title>皮卡丘学数学之鸡兔同笼双假设演示</title>
     <meta name="author" CONTENT="子勰(bihe0832), code@bihe0832.com" />
     <meta name="keywords" content="子勰,bihe0832,工具咩" />
@@ -62,7 +69,7 @@
         input {
             padding: 8px;
             margin: 0 10px;
-            width: 80px;
+            width: 40px;
             border: 2px solid #8d6e63;
             border-radius: 5px;
         }
@@ -163,8 +170,8 @@
     <h2>皮卡丘学数学之鸡兔同笼双假设演示</h2>
     
     <div class="method-selector">
-        <span class="method-btn active" onclick="toggleMethod('chicken')">🐔 先假设全是鸡</span>
-        <span class="method-btn" onclick="toggleMethod('rabbit')">🐇 先假设全是兔</span>
+        <span class="method-btn active" onclick="toggleMethod('chicken')">先全是鸡</span>
+        <span class="method-btn" onclick="toggleMethod('rabbit')">先全是兔</span>
     </div>
 
     <div class="input-group">
@@ -183,8 +190,8 @@
     <div class="steps" id="steps"></div>
 
     <script>
-        const CHICKEN_IMG = 'https://pic.616pic.com/ys_bnew_img/00/48/84/t4CJgl2Gje.jpg';
-        const RABBIT_IMG = 'https://pic.huitu.com/pic/20250222/1426047_20250222005945276375_0.jpg';
+        const CHICKEN_IMG = './chicken.jpg';
+        const RABBIT_IMG = './rabbit.jpg';
         let stepsData = [];
         let currentStep = 0;
         let currentMethod = 'chicken';
