鸡兔同笼问题

--- a/tools/index.html
+++ b/tools/index.html
@@ -313,10 +313,10 @@
           },
           {
             isOwner: true,
-            name: '皮卡丘图书馆',
-            intro: '皮卡丘书单推荐系列',
+            name: '皮卡丘系列',
+            intro: '皮卡丘常用工具系列',
             img: 'https://imgservice.suning.cn/uimg1/b2c/image/b1w1h8SRYQeryB5hPwRzuw.jpg',
-            url: 'https://cdn.bihe0832.com/tools/book/list.html'
+            url: 'https://cdn.bihe0832.com/pikachu/index.html'
           },
           {
             isOwner: true,
