--- a/pikachu/index.html
+++ b/pikachu/index.html
@@ -212,6 +212,13 @@ new Vue({
           [
             { name: '🐔🐰鸡兔同笼', onlineURL: 'https://cdn.bihe0832.com/pikachu/chicken_rabbit/chicken_rabbit.html' },
           ]
+        },
+        {
+          title:"游戏相关",
+          data:
+          [
+            { name: '扫雷游戏', onlineURL: 'https://cdn.bihe0832.com/game/minesweeper.html' },
+          ]
         }
       ]
     }
