--- a/pikachu/index.html
+++ b/pikachu/index.html
@@ -211,6 +211,7 @@ new Vue({
           data:
           [
             { name: '🐔🐰鸡兔同笼', onlineURL: 'https://cdn.bihe0832.com/pikachu/chicken_rabbit/chicken_rabbit.html' },
+            { name: '🌲植树问题🌲', onlineURL: 'https://cdn.bihe0832.com/pikachu/plant/plant.html' },
           ]
         },
         {
