--- a/game/minesweeper.html
+++ b/game/minesweeper.html
@@ -392,7 +392,7 @@
             <h3>基本操作</h3>
             <ul>
                 <li><strong>点击格子</strong>：揭示该格子</li>
-                <li><strong>长按格子</strong>：标记/取消标记为地雷</li>
+                <li><strong>长按或右击格子</strong>：标记/取消标记为地雷</li>
                 <li><strong>数字</strong>：表示周围8个格子中的地雷数量</li>
                 <li><strong>第一次点击</strong>：永远不会点到地雷</li>
             </ul>
