--- a/pikachu/index.html
+++ b/pikachu/index.html
@@ -210,8 +210,9 @@ new Vue({
           title:"数学相关",
           data:
           [
-            { name: '🐔🐰鸡兔同笼', onlineURL: 'https://cdn.bihe0832.com/pikachu/chicken_rabbit/chicken_rabbit.html' },
-            { name: '🌲植树问题🌲', onlineURL: 'https://cdn.bihe0832.com/pikachu/plant/plant.html' },
+            { name: '🐔🐰 鸡兔同笼', onlineURL: 'https://cdn.bihe0832.com/pikachu/chicken_rabbit/chicken_rabbit.html' },
+            { name: '🌲 植树问题 🌲', onlineURL: 'https://cdn.bihe0832.com/pikachu/plant/plant.html' },
+            { name: '🔢 数独计算 🔢', onlineURL: 'https://cdn.bihe0832.com/pikachu/sudoku/sudoku.html' },
           ]
         },
         {
