--- a/pikachu/index.html
+++ b/pikachu/index.html
@@ -199,6 +199,13 @@ new Vue({
       tipsTimeout: 0,
       dataList:[
         {
+          title:"学习相关",
+          data:
+          [
+            { name: '皮卡丘的课程表', onlineURL: 'https://cdn.bihe0832.com/pikachu/curriculum/index.html' },
+          ]
+        },
+        {
           title:"绘本相关",
           data:
           [
