--- a/pikachu/curriculum/index.html
+++ b/pikachu/curriculum/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <meta name="author" CONTENT="子勰(bihe0832), code@bihe0832.com" />
     <meta name="keywords" content="子勰,bihe0832,工具咩" />
-    <meta name="description" content="皮卡丘学数学之鸡兔同笼双假设演示" />
-    <meta property="og:title" content="皮卡丘学数学之鸡兔同笼双假设演示" />
+    <meta name="description" content="皮卡丘的课程表" />
+    <meta property="og:title" content="皮卡丘的课程表" />
     <meta property="og:locale" content="en_US" />
     <meta name="google-site-verification" content="3wzNgbjvFNHkH-8QpougMZ0s9Y4GEjG49kEb49QQqpw" />
     <meta property="og:description" content="" />
