--- a/pikachu/curriculum/index.html
+++ b/pikachu/curriculum/index.html
@@ -352,7 +352,7 @@
                                 <div class="flex items-center justify-center">
                                     <i class="fas fa-bolt text-yellow-300 mr-2"></i>
                                     <i class="fas fa-calendar-alt mr-2"></i>
-                                    <span class="text-xl font-bold">皮卡丘的课程表</span>
+                                    <span class="text-xl font-bold">粉卡比的课程表</span>
                                     <i class="fas fa-bolt text-yellow-300 ml-2"></i>
                                 </div>
                             </th>
