--- a/pikachu/index.html
+++ b/pikachu/index.html
@@ -203,6 +203,7 @@ new Vue({
           data:
           [
             { name: '皮卡丘的课程表', onlineURL: 'https://cdn.bihe0832.com/pikachu/curriculum/index.html' },
+            { name: '皮卡丘行为要求金字塔', onlineURL: 'https://cdn.bihe0832.com/pikachu/rule/index.html' },
           ]
         },
         {
