更新课程表背景为粉色渐变风格

--- a/pikachu/curriculum/index.html
+++ b/pikachu/curriculum/index.html
@@ -32,7 +32,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         .schedule-table {
-            background: #4f46e5;
+            background: linear-gradient(135deg, #f9a8d4 0%, #f472b6 50%, #ec4899 100%);
             border-radius: 20px;
             box-shadow: 0 20px 40px rgba(0,0,0,0.1);
             position: relative;
