更新课程表样式：调整科目颜色配置，添加卡比系列角色图标
- 调整多个科目颜色避免撞色：英语改为红色，综合/围棋改为灰色，道法改为绿色，美术改为粉红色，数学改为紫色，劳动改为绿色，班会改为棕色
- 将星期表头的图标替换为卡比系列角色：周一卡比，周二帝帝帝大王，周三瓦豆鲁迪，周四魅塔骑士，周五卡比
- 优化图标尺寸为32x32像素，提升视觉效果

--- a/pikachu/curriculum/index.html
+++ b/pikachu/curriculum/index.html
@@ -360,19 +360,19 @@
                         <tr>
                             <th class="day-header time-column p-4 text-center">时间</th>
                             <th class="day-header p-4 text-center">
-                                <i class="fas fa-sun mr-2"></i>周一
+                                <img src="https://www.nintendo.com/tw/switch/a2jya/assets/img/common/chara_kirby.png" alt="卡比" class="inline-block w-8 h-8 mr-2" onerror="this.style.display='none'">周一
                             </th>
                             <th class="day-header p-4 text-center">
-                                <i class="fas fa-star mr-2"></i>周二
+                                <img src="https://www.nintendo.com/tw/switch/a2jya/assets/img/common/chara_dedede.png" alt="帝帝帝大王" class="inline-block w-8 h-8 mr-2" onerror="this.style.display='none'">周二
                             </th>
                             <th class="day-header p-4 text-center">
-                                <i class="fas fa-heart mr-2"></i>周三
+                                <img src="https://www.nintendo.com/tw/switch/a2jya/assets/img/common/chara_waddledee.png" alt="瓦豆鲁迪" class="inline-block w-8 h-8 mr-2" onerror="this.style.display='none'">周三
                             </th>
                             <th class="day-header p-4 text-center">
-                                <i class="fas fa-leaf mr-2"></i>周四
+                                <img src="https://www.nintendo.com/tw/switch/a2jya/assets/img/common/chara_metaknight.png" alt="魅塔骑士" class="inline-block w-8 h-8 mr-2" onerror="this.style.display='none'">周四
                             </th>
                             <th class="day-header last-day p-4 text-center">
-                                <i class="fas fa-rainbow mr-2"></i>周五
+                                <img src="https://www.nintendo.com/tw/switch/a2jya/assets/img/common/chara_kirby.png" alt="卡比" class="inline-block w-8 h-8 mr-2" onerror="this.style.display='none'">周五
                             </th>
                         </tr>
                     </thead>
