--- a/pikachu/index.html
+++ b/pikachu/index.html
@@ -224,6 +224,13 @@ new Vue({
           ]
         },
         {
+          title:"历史相关",
+          data:
+          [
+            { name: '中国历史时间轴', onlineURL: 'https://cdn.bihe0832.com/pikachu/history/china.png' },
+          ]
+        },
+        {
           title:"游戏相关",
           data:
           [
