--- a/pikachu/index.html
+++ b/pikachu/index.html
@@ -274,7 +274,11 @@
                 { 
                   name: '中国历史时间轴', 
                   onlineURL: 'https://cdn.bihe0832.com/pikachu/history/china.png' 
-                }
+                },
+                { 
+                  name: '中国历史朝代顺序表', 
+                  onlineURL: 'https://cdn.bihe0832.com/pikachu/history/dynasty.html' 
+                },
               ]
             },
             {
