feat(pikachu): 重构目录结构，新增唐代诗人关系网络
- 将数学工具移动到 shuxue 子目录
- 新增语文模块 yuwen，包含唐代诗人关系网络
- 更新首页索引链接

--- a/pikachu/index.html
+++ b/pikachu/index.html
@@ -256,15 +256,24 @@
               data: [
                 { 
                   name: '🐔🐰 鸡兔同笼', 
-                  onlineURL: 'https://cdn.bihe0832.com/pikachu/chicken_rabbit/chicken_rabbit.html' 
+                  onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/chicken_rabbit/chicken_rabbit.html' 
                 },
                 { 
                   name: '🌲 植树问题 🌲', 
-                  onlineURL: 'https://cdn.bihe0832.com/pikachu/plant/plant.html' 
+                  onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/plant/plant.html' 
                 },
                 { 
                   name: '🔢 数独计算 🔢', 
-                  onlineURL: 'https://cdn.bihe0832.com/pikachu/sudoku/sudoku.html' 
+                  onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/sudoku/sudoku.html' 
+                }
+              ]
+            },
+            {
+              title: "语文相关",
+              data: [
+                { 
+                  name: '📜 唐代诗人关系网络', 
+                  onlineURL: 'https://cdn.bihe0832.com/pikachu/yuwen/poetry.html' 
                 }
               ]
             },
