fix(book): 更新 book 目录迁移后的链接引用
- pikachu/index.html: 更新图书馆链接
- tools/index.html: 更新书籍配置工具链接

--- a/pikachu/index.html
+++ b/pikachu/index.html
@@ -243,11 +243,11 @@
               data: [
                 { 
                   name: '皮卡丘图书馆', 
-                  onlineURL: 'https://cdn.bihe0832.com/tools/book/list.html' 
+                  onlineURL: 'https://cdn.bihe0832.com/pikachu/book/list.html' 
                 },
                 { 
                   name: '书籍配置生成', 
-                  onlineURL: 'https://cdn.bihe0832.com/tools/book/book.html' 
+                  onlineURL: 'https://cdn.bihe0832.com/pikachu/book/book.html' 
                 }
               ]
             },
