--- a/tools/index.html
+++ b/tools/index.html
@@ -309,7 +309,7 @@
             name: '书籍推荐配置生成工具',
             intro: '通过WebUI 添加信息，自动生成书籍推荐的配置文件',
             img: 'https://imgservice.suning.cn/uimg1/b2c/image/b1w1h8SRYQeryB5hPwRzuw.jpg',
-            url: 'https://cdn.bihe0832.com/tools/book/book.html'
+            url: 'https://cdn.bihe0832.com/pikachu/book/book.html'
           },
           {
             isOwner: true,
