style(pikachu): 优化课程表和古诗词页面移动端显示
- 课程表时间列添加响应式字体缩小
- 古诗词页面添加响应式字体和行高调整

--- a/pikachu/yuwen/poetry.html
+++ b/pikachu/yuwen/poetry.html
@@ -576,6 +576,21 @@
             line-height: 2.2;
             text-align: center;
             white-space: pre-line;
+            word-break: keep-all;
+        }
+
+        @media (max-width: 600px) {
+            .poem-card .poem-text {
+                font-size: 0.95em;
+                line-height: 2;
+            }
+        }
+
+        @media (max-width: 400px) {
+            .poem-card .poem-text {
+                font-size: 0.85em;
+                line-height: 1.8;
+            }
         }
 
         .poem-card .poem-note {
