fix(poetry): 修复移动设备关闭按钮不可见问题

--- a/pikachu/yuwen/poetry.html
+++ b/pikachu/yuwen/poetry.html
@@ -608,15 +608,15 @@
         }
 
         #poem-modal-close {
-            position: fixed;
-            top: calc(7.5vh + 20px);
-            right: calc(5% + 25px);
+            position: absolute;
+            top: 20px;
+            right: 20px;
             color: #888;
             font-size: 32px;
             font-weight: bold;
             cursor: pointer;
             transition: all 0.3s ease;
-            z-index: 1001;
+            z-index: 20;
             width: 40px;
             height: 40px;
             display: flex;
