fix(shuxue): 优化牛吃草答案显示格式

--- a/pikachu/shuxue/grass/grass.html
+++ b/pikachu/shuxue/grass/grass.html
@@ -648,7 +648,8 @@
                     </div>
                 </div>
                 <div class="answer-box" id="answerBox">
-                    <h3>🎉 答案：第 <span id="answerDay">0</span> 天草被吃完！</h3>
+                    <h3>🎉 答案</h3>
+                    <p style="margin: 5px 0 0 0; color: #f57f17;">第 <span id="answerDay">0</span> 天草被吃完</p>
                 </div>
             </div>
         </div>
