feat(shuxue): 新增年龄问题页面并优化数学学习模块
- 新增年龄问题页面，使用份数法等算术方法
- 优化鸡兔同笼、牛吃草、植树问题副标题为核心思想总结
- 植树问题增加两端栽树选项和题目显示区域

--- a/pikachu/shuxue/chicken_rabbit/chicken_rabbit.html
+++ b/pikachu/shuxue/chicken_rabbit/chicken_rabbit.html
@@ -441,7 +441,7 @@
     <div class="container">
         <header>
             <h2><i class="fas fa-calculator"></i> 皮卡丘学数学之鸡兔同笼双假设演示</h2>
-            <p>分步解答一目了然</p>
+            <p>假设全是一种，用脚数差算另一种</p>
         </header>
         
         <div class="main-content">
