--- a/pikachu/shuxue/grass/grass.html
+++ b/pikachu/shuxue/grass/grass.html
@@ -553,7 +553,7 @@
     <div class="container">
         <header>
             <h2><i class="fas fa-seedling"></i> 皮卡丘学数学之牛吃草问题演示</h2>
-            <p>分步解答一目了然</p>
+            <p>草在长牛在吃，用两次吃草差求每天新长量</p>
         </header>
         
         <div class="main-content">
