--- a/pikachu/index.html
+++ b/pikachu/index.html
@@ -218,6 +218,7 @@
                 { name: '鸡兔同笼', emoji: '🐔', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/chicken_rabbit/chicken_rabbit.html' },
                 { name: '牛吃草', emoji: '🐄', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/grass/grass.html' },
                 { name: '植树问题', emoji: '🌲', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/plant/plant.html' },
+                { name: '年龄问题', emoji: '👨‍👦', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/age/age.html' },
                 { name: '数独计算', emoji: '🧩', onlineURL: 'https://cdn.bihe0832.com/pikachu/shuxue/sudoku/sudoku.html' }
               ]
             },
